Fix right spacing of background pattern of image right teaser cards

--- a/src/assets/custom/css/_sass/_teaser-group.scss
+++ b/src/assets/custom/css/_sass/_teaser-group.scss
@@ -55,12 +55,15 @@
   }
 }
 
-.teaser-group__card:nth-of-type(even) {
+.teaser-group__card:nth-of-type(even)::after {
+  @include large{
+    right: 2 * $lateral-space--large;
+  }
   @include large-and-extra-large {
-    &::after {
       left: 50%;
-      right: 2 * $lateral-space--large;
-    }
+  }
+  @include extra-large{
+    right: $lateral-space--large;
   }
 }
 
